--- a/index.html
+++ b/index.html
@@ -26,12 +26,23 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Google Font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Urbanist">
+
+    <!-- supabase cdns-->
+    <script src="https://unpkg.com/@supabase/supabase-js@2"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.29.0/dist/umd/supabase.js"></script>
+
+
     <!-- CSS Style Sheet -->
-    <link rel="stylesheet" href="./styles.css"> 
+    <link rel="stylesheet" href="./styles.css">
 
 </head>
 
 <body>
+
+    <!-- Import supabase -->
+    <script type='module' src=" ../00_setup/supabase.js"></script>
+    <script type="module" src="ex_2.js"></script>
+
 
 </body>
 
