--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
-    <script type="module" src="ex_2.js"></script>
+    <script type="module" src="./01_api/supabase_api.js"></script>
 
 
 </body>
