--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 <body>
 
+    <h1>asdfghj</h1>
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="./01_api/supabase_api.js"></script>
