--- a/index.html
+++ b/index.html
@@ -38,11 +38,27 @@
 
 <body>
 
-    <h1>asdfghj</h1>
+    <h2>Heutige Quest:</h2>
+
+    <h1>Hier steht eine Quest.</h1>
+
+    <div class="questImages">
+        <img src="" alt="img1">
+        <img src="" alt="img2">
+        <img src="" alt="img3">
+        <img src="" alt="img4">
+        <img src="" alt="img5">
+        <img src="" alt="img6">
+        <img src="" alt="img7">
+        <img src="" alt="img8">
+        <img src="" alt="img9">
+    </div>
+
+    <input type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
+
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="./01_api/supabase_api.js"></script>
-
 
 </body>
 
