--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 <body>
 
-    <h2>Heutige Quest:</h2>
+    <h2 id="Heutige_Quest_1">Heutige Quest:</h2>
 
-    <h1>Hier steht eine Quest.</h1>
+    <h1 id="Heutige_Quest_2">Hier steht eine Quest.</h1>
 
     <div class="questImages">
         <img src="" alt="img1">
