added header and footer to index

--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
 
 </head>
 
+<header>
+    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+    <a href="../views/profile.html">
+        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+</header>
+
 <body>
 
     <h2 id="Heutige_Quest_1">Heutige Quest:</h2>
 
     <h1 id="Heutige_Quest_2">Hier steht eine Quest.</h1>
 
-    <div class="questImages">
+    <div class="quest_Images">
         <img src="" alt="img1">
         <img src="" alt="img2">
         <img src="" alt="img3">
@@ -61,5 +67,11 @@
     <script type="module" src="./01_api/supabase_api.js"></script>
 
 </body>
+
+<footer>
+    <a href="../views/impressum.html" target="_blank">Impressum</a>
+    <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
+    <a href="../views/about.html" target="_blank">About</a>
+</footer>
 
 </html>
