--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <img src="" alt="img9">
     </div>
 
-    <input type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
+    <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
 
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
