--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         <img src="" alt="img9">
     </div>
 
-    <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
+    <label for="myCheckbox">
+        <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
+    </label>
+
 
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
