--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
 <body>
 
-    <h2 id="Heutige_Quest_1">Heutige Quest:</h2>
+    <h2 id="daily_Quest_1">Heutige Quest:</h2>
 
-    <h1 id="Heutige_Quest_2">Hier steht eine Quest.</h1>
+    <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
 
     <div class="quest_Images">
         <img src="" alt="img1">
