--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
 
     <div class="quest_Images">
-        <img src="img/images/IMG_3778.HEIC" alt="img1">
+        <img src="img/images/IMG_3778.jpg" alt="img1">
         <img src="img/images/IMG_3779.HEIC" alt="img2">
         <img src="img/images/IMG_3780.HEIC" alt="img3">
         <img src="img/images/IMG_3781.HEIC" alt="img4">
