--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
 
     <div class="quest_Images">
-        <img src="img/images/IMG_3778.HEIC" alt="img1">
-        <img src="img/images/IMG_3779.HEIC" alt="img2">
-        <img src="img/images/IMG_3780.HEIC" alt="img3">
-        <img src="img/images/IMG_3781.HEIC" alt="img4">
-        <img src="img/images/IMG_3782.HEIC" alt="img5">
+        <img src="img/images/IMG_3778.jpg" alt="img1">
+        <img src="img/images/IMG_3779.jpg" alt="img2">
+        <img src="img/images/IMG_3780.jpg" alt="img3">
+        <img src="img/images/IMG_3781.jpg" alt="img4">
+        <img src="img/images/IMG_3782.jpg" alt="img5">
         <img src="" alt="img6">
         <img src="" alt="img7">
         <img src="" alt="img8">
