--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <img src="img/images/IMG_3780.jpg" alt="img3">
         <img src="img/images/IMG_3781.jpg" alt="img4">
         <img src="img/images/IMG_3782.jpg" alt="img5">
-        <img src="" alt="img6">
-        <img src="" alt="img7">
-        <img src="" alt="img8">
-        <img src="" alt="img9">
+        <img src="img/images/IMG_3778.jpg" alt="img6">
+        <img src="img/images/IMG_3779.jpg" alt="img7">
+        <img src="img/images/IMG_3780.jpg" alt="img8">
+        <img src="img/images/IMG_3782.jpg" alt="img9">
     </div>
 
     <div class="checkbox">
