--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="./styles.css">
 
+    <!-- JS -->
+    <script type="module" src="./script.js"></script>
+
+
 </head>
 
 <header>
