image upload button

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
     </div>
 
+    <form id="image_Upload">
+        <input type="file" id="image_File" accept="image/*">
+    </form>
+      
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="./01_api/supabase_api.js"></script>
