--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <img src="img/images/IMG_3782.jpg" alt="img9">
     </div>
 
-    <div class="checkbox">
+    <div id="checkbox">
         <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
     </div>
 
