llinked script to index

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="./styles.css">
 
     <!-- JS -->
-    <script type="module" src="./script.js"></script>
+    <script type="module" src="03_scripts/index.js"></script>
 
 
 </head>
