--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
 
 <body>
 
-    <h2 id="daily_Quest_1">Heutige Quest:</h2>
+    <div class="quest_box">
+        <h2 id="daily_Quest_1">Heutige Quest:</h2>
+        <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
+    </div>
 
-    <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
+
 
     <div class="quest_Images">
         <img src="" alt="img1">
