--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
 
-    <div class="quest_box">
+    <div id="quest_box">
         <h2 id="daily_Quest_1">Heutige Quest:</h2>
         <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
     </div>
