--- a/index.html
+++ b/index.html
@@ -67,12 +67,8 @@
     </div>
 
     <div id="checkbox">
-        <input id="quest_checkbox" type="checkbox" name="myCheckbox" id="myCheckbox" onclick="this.disabled = true;">
+        <input type="file" id="quest_checkbox" accept="image/*">
     </div>
-
-    <form id="image_Upload">
-        <input type="file" id="image_File" accept="image/*">
-    </form>
       
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
