--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
     </div>
 
     <div id="checkbox">
-        <input type="file" id="quest_checkbox" accept="image/*">
-    </div>
+        <input type="file" id="quest_checkbox" accept="image/*" onchange="displaySelectedFile()">
+        <label for="quest_checkbox" id="checkbox_button">Quest abgeschlossen</label>
+    </div>      
       
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
