debugging quest button

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
     <div id="checkbox">
         <input type="file" id="quest_checkbox" accept="image/*" onchange="displaySelectedFile()">
         <label for="quest_checkbox" id="checkbox_button">Quest abgeschlossen</label>
-    </div>      
+    </div>
+    
+    <div id="congrats">
+        Gratuliere!
+    </div>
       
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
