--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
         <label for="quest_checkbox" id="checkbox_button">Quest abgeschlossen</label>
     </div>
     
-    <div id="congrats">
-        Gratuliere!
-    </div>
+    <h1 id="congrats">Gratuliere!</h1>
       
     <!-- Import supabase -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
