--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <a href="../views/impressum.html" target="_blank">Impressum</a>
     <a href="../views/rules.html" target="_blank">Regeln & Rechtliches</a>
     <a href="../views/about.html" target="_blank">About</a>
+    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
 </footer>
 
 </html>
