--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <!-- supabase cdns-->
     <script src="https://unpkg.com/@supabase/supabase-js@2"> </script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.29.0/dist/umd/supabase.js"></script>
@@ -41,13 +43,14 @@
 
 </head>
 
-<header>
-    <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
-    <a href="../views/profile.html">
-        <img id="profile_icon" src="../img/graphics/profile.png" alt="Profile Icon"></a>
-</header>
-
 <body>
+
+    <header>
+        <a href="#"><img id="header_logo" src="../img/graphics/LogoOQ4.png" alt="Header Logo OQ"></a>
+        <a href="../views/profile.html">
+            <img id="profile_icon" class="avatar" src="../img/graphics/profile.png" alt="Profile Icon"></a>
+    </header>
+
 
     <div id="quest_box">
         <h2 id="daily_Quest_1">Heutige Quest:</h2>
@@ -70,20 +73,22 @@
         <input type="file" id="quest_checkbox" accept="image/*" onchange="displaySelectedFile()">
         <label for="quest_checkbox" id="checkbox_button">Quest abgeschlossen</label>
     </div>
-    
+
     <h1 id="congrats">Gratuliere!</h1>
-      
-    <!-- Import supabase -->
+
+
+
+    <footer>
+        <a href="../views/impressum.html" target="_blank">Impressum</a>
+        <a href="../views/rules.html" target="_blank">Regeln</a>
+        <a href="../views/about.html" target="_blank">About</a>
+        <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
+    </footer>
+    <!-- Import modules -->
     <script type='module' src=" ../00_setup/supabase.js"></script>
     <script type="module" src="./01_api/supabase_api.js"></script>
+    <script type="module" src="../mainUser.js"></script>
 
 </body>
-
-<footer>
-    <a href="../views/impressum.html" target="_blank">Impressum</a>
-    <a href="../views/rules.html" target="_blank">Regeln</a>
-    <a href="../views/about.html" target="_blank">About</a>
-    <a href="../views/datenschutz.html" target="_blank">Datenschutz</a>
-</footer>
 
 </html>
