--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div id="quest_box">
         <h2 id="daily_Quest_1">Heutige Quest:</h2>
-        <h1 id="daily_Quest_2">Hier steht eine Quest.</h1>
+        <h1 id="daily_Quest_2">Quest wird geladen.</h1>
     </div>
 
     <div class="quest_Images">
