--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <!--Default character set: https://www.w3schools.com/html/html_charset.asp-->
-    <title></title>
+    <title>oneQuest | Home</title>
     <!--Tab title-->
     <meta name="description" content="">
     <!--Description of web page-->
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Responsive web design:https://www.w3schools.com/css/css_rwd_viewport.asp-->
 
-    <link rel="icon" href="">
+    <link rel="icon" href="./img/graphics/LogoOQ4.png">
     <!--Tab image-->
 
     <!--MAXcdn:-->
@@ -23,7 +23,7 @@
     <!--FontAwesome Free-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
